--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@uniswap/v4-sdk": "^1.21.4",
     "ethers": "^6.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
