--- a/react-frontend/.env
+++ b/react-frontend/.env
@@ -1,13 +1,2 @@
-# Example environment variables for multi-chain and API support
-
-# Default chain (e.g., 1 for Ethereum Mainnet, 10 for Optimism, 137 for Polygon, etc.)
-REACT_APP_DEFAULT_CHAIN_ID=1
-
-# Example API keys
-REACT_APP_INFURA_API_KEY=your_infura_key_here
-REACT_APP_ALCHEMY_API_KEY=your_alchemy_key_here
-
-# Example custom API endpoint
-REACT_APP_CUSTOM_API_URL=https://api.example.com
-
-# Add more as needed...
+# Uniswap V4 Subgraph API Key for The Graph
+REACT_APP_GRAPH_API_KEY=b824a4dba870fc445b37d5ee1abf9a79
