--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -18,6 +18,7 @@
     "@uniswap/v4-sdk": "^1.21.4",
     "ethers": "^6.15.0",
     "graphql": "^16.11.0",
+    "node-fetch": "^2.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
