feat: add useAccessControlResolver hook for dynamic address resolution from AccessControl contracts
fix: update useAdminActions to fallback to chain settings for master control address

fix: enhance useBlocks to fallback to chain settings for master control address

fix: modify useBonding to utilize resolved addresses and chain settings for bonding address

refactor: update useContracts to integrate useAccessControlResolver for address resolution

fix: adjust useDegen to fallback to resolved addresses and chain settings for pool address

feat: implement useLaunchPadActions for interacting with PoolLaunchPad contract

feat: create useLaunchPadPools hook to fetch all pools from PoolLaunchPad contract

feat: add usePoolDetails hook for fetching details of individual pools

feat: introduce usePoolHooks for managing pool-specific hooks

feat: add ResolverTest page for debugging AccessControl resolver functionality

--- a/react-frontend/.env
+++ b/react-frontend/.env
@@ -1,3 +1,4 @@
 # Uniswap V4 Subgraph API Key for The Graph
 REACT_APP_GRAPH_API_KEY=b824a4dba870fc445b37d5ee1abf9a79
-REACT_APP_MASTER_CONTROL_ADDRESS=0xa0Ee7A142d267C1f36714E4a8F75612F20a79720
+
+FAST_REFRESH=false
