--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -11,13 +11,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@uniswap/v4-sdk": "^1.21.4",
     "cross-env": "^7.0.3",
     "ethers": "^6.15.0",
+    "dotenv": "^10.0.0",
     "graphql": "^16.11.0",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
@@ -53,5 +52,13 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "@types/node": "^20.12.12",
+    "@viem/anvil": "^0.0.10",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  }
 }
